# safetensors_schema.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
safetensors_schema/: __init__.py
tests/: tests.json  tests.py
